add test for contact form

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -25,14 +25,14 @@
   /* animation: move 3s infinite ease alternate; */
 }
 
-@keyframes move {
+/* @keyframes move {
   from {
     transform: translateY(-10px);
   }
   to {
     transform: translateY(10px);
   }
-}
+} */
 
 .desc {
   font-size: 24px;
