--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,4 +1,3 @@
-
 .title {
   font-size: 60px;
   margin-bottom: 100px;
@@ -13,23 +12,23 @@
 
 .imgContainer {
   flex: 1;
-  height: 500px;
+  height: 400px;
   position: relative;
 }
 
 .image {
-  object-fit: contain;
+  object-fit: cover;
   /* animation: move 3s infinite ease alternate; */
 }
 
-@keyframes move {
+/* @keyframes move {
   from {
     transform: translateY(-15px);
   }
   to {
     transform: translateY(0px) scale(1.03);
   }
-}
+} */
 
 .form {
   flex: 1;
